--- a/js-3-feladatok-matching-game/assets/css/style.css
+++ b/js-3-feladatok-matching-game/assets/css/style.css
@@ -123,7 +123,7 @@ h2 {
 @media only screen and (max-width: 1000px) {
     body {
         margin: 0;
-
+        margin-bottom: 100px;
     }
 
     h1,
@@ -179,7 +179,7 @@ h2 {
     }
 
     #gameboard {
-        margin: 0 5%;
+        margin: 0 3%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -189,7 +189,7 @@ h2 {
         display: inline-block;
         width: 39px;
         height: 57px;
-        padding: 3px 1px;
+        padding: 2px 1px;
     }
 
     .card-inner {
@@ -200,12 +200,12 @@ h2 {
         height: 57px;
         transition: transform 0.5s;
         transform-style: preserve-3d;
-        padding: 3px 1px;
+        padding: 2px 1px;
     }
 
     .music {
         position: fixed;
-        top: 69%;
+        top: 89%;
         right: 10%;
     }
 
