--- a/scss-feladatok-sitebuilding/assets/src/scss/style.scss
+++ b/scss-feladatok-sitebuilding/assets/src/scss/style.scss
@@ -1,89 +1,74 @@
-@font-face {
-    font-family: 'Catamaran';
-    src: url(./fonts/Catamaran.ttf);
-    font-weight: 100;
+@use "sass:map";
+
+//using sass to import color variables
+@use "./variables/colors" as *;
+//using sass to import fonts and making classes with loops
+@use "./variables/fonts" as *;
+
+@each $name,$source in $fonts {
+    @font-face {
+        font-family: $name;
+        src: url($source);
+        font-weight: 100;
+    }
+
+    .#{$name} {
+        font-family: $name, Helvetica, Arial, sans-serif;
+    }
 }
 
-@font-face {
-    font-family: 'Lato';
-    src: url(./fonts/Lato.ttf);
-    font-weight: 100;
-}
+/*All site*/
 
 html {
     scroll-behavior: smooth;
-}
-
-.catamaran {
-    font-family: 'Catamaran', Helvetica, Arial, sans-serif;
-}
-
-.lato {
-    font-family: 'Lato', Helvetica, Arial, sans-serif;
-}
-
-.muli {
-    font-family: 'Muli', Helvetica, Arial, sans-serif;
-}
-
-:root {
-    --primary-color: rgb(253, 204, 82);
-    --new-age-bg-left: rgb(217, 36, 51);
-    --new-age-bg-right: rgb(125, 66, 148);
-    --features-icon-color: rgb(178, 50, 93);
-    --footer-bg: rgb(34, 34, 34);
-}
-
-.rounded-pill {
-    font-family: 'Lato';
-    padding: 10px 35px 10px 35px;
-    letter-spacing: 2px;
-}
-
-.rounded-pill:hover {
-    background-color: var(--primary-color);
-    border: var(--primary-color);
-    transition: 300ms
 }
 
 *:hover {
     transition: all 300ms;
 }
 
+.rounded-pill {
+    font-family: 'Lato';
+    padding: 10px 35px 10px 35px;
+    letter-spacing: 2px;
+
+    &:hover {
+        background-color: $primary-color;
+        border: $primary-color;
+        transition: 300ms
+    }
+}
+
 /*NEW-AGE*/
 
 .navbar-brand {
-    color: var(--primary-color) !important;
-}
+    color: $primary-color !important;
 
-.navbar-brand:hover {
-    color: white !important;
+    &:hover {
+        color: white !important;
+    }
 }
 
 .scrolled .navbar-brand {
     color: black !important;
+    &:hover {
+        color: $primary-color !important;
+    }    
 }
 
-.scrolled .navbar-brand:hover {
-    color: var(--primary-color) !important;
-}
-
-
-#new-age .nav-link {
+.nav-link {
     font-size: 10px;
     color: rgb(214, 196, 213) !important;
+    &:hover {
+        color: white !important;
+    }
 }
 
-#new-age .nav-link:hover {
-    color: white !important;
-}
-
-#new-age .scrolled .nav-link {
+.scrolled .nav-link {
     color: black !important;
-}
-
-#new-age .scrolled .nav-link:hover {
-    color: var(--primary-color) !important;
+    &:hover {
+        color: $primary-color !important;
+    }
 }
 
 .scrolled {
@@ -92,7 +77,7 @@ html {
 
 #new-age {
     height: 850px;
-    background: url('/assets/img/bg-pattern.png'), linear-gradient(to right, var(--new-age-bg-left), var(--new-age-bg-right));
+    background: url('/assets/img/bg-pattern.png'), linear-gradient(to right, $new-age-bg-left, $new-age-bg-right);
     background-repeat: repeat;
 }
 
@@ -120,7 +105,7 @@ html {
 
 #download,
 #contact {
-    background-color: var(--primary-color) !important;
+    background-color: $primary-color !important;
 }
 
 #download {
@@ -170,7 +155,7 @@ html {
 
 .icon {
     font-size: 70px;
-    color: var(--features-icon-color);
+    color: $features-icon-color;
 }
 
 /*STOPWAITING*/
@@ -223,7 +208,7 @@ html {
 
 footer {
     height: 110px;
-    background-color: var(--footer-bg);
+    background-color: $footer-bg;
 }
 
 footer span {
@@ -231,7 +216,7 @@ footer span {
 }
 
 footer span:hover {
-    color: var(--primary-color) !important;
+    color: $primary-color !important;
 }
 
 @media screen and (max-width: 991px) {
@@ -251,11 +236,11 @@ footer span:hover {
     }
 
     .scrolled .navbar-brand {
-        color: var(--primary-color) !important;
+        color: $primary-color !important;
     }
 
     #new-age .nav-link:focus {
-        color: var(--primary-color) !important;
+        color: $primary-color !important;
     }
 
     #new-age h1 {
@@ -324,7 +309,7 @@ footer span:hover {
 
     .icon {
         font-size: 120px;
-        color: var(--features-icon-color);
+        color: $features-icon-color;
     }
 
     #features h3 {
@@ -363,3 +348,18 @@ footer span:hover {
         font-size: 25px;
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
