--- a/bs-feladatok-sitebuilding/assets/css/style.css
+++ b/bs-feladatok-sitebuilding/assets/css/style.css
@@ -1,12 +1,12 @@
 @font-face {
     font-family: 'Catamaran';
-    src: url(./fonts/Catamaran.ttf);
+    src: url('/assets/fonts/Catamaran.ttf');
     font-weight: 100;
 }
 
 @font-face {
     font-family: 'Lato';
-    src: url(./fonts/Lato.ttf);
+    src: url('/assets/fonts/Lato.ttf');
     font-weight: 100;
 }
 
