--- a/scss-feladatok-sitebuilding/assets/src/scss/variables/_colors.scss
+++ b/scss-feladatok-sitebuilding/assets/src/scss/variables/_colors.scss
@@ -1,5 +1,13 @@
 $primary-color: rgb(253, 204, 82);
 $new-age-bg-left: rgb(217, 36, 51);
 $new-age-bg-right: rgb(125, 66, 148);
+$navbar-color: rgb(214, 196, 213);
 $features-icon-color: rgb(178, 50, 93);
 $footer-bg: rgb(34, 34, 34);
+$white: white;
+$black: black;
+$gray: gray;
+$heart: rgb(221,76,57);
+$twitter: rgb(29, 161, 243);
+$facebook: rgb(59, 89, 153);
+$gmail: rgb(215, 74, 53);
