--- a/scss-feladatok-sitebuilding/assets/src/scss/variables/_fonts.scss
+++ b/scss-feladatok-sitebuilding/assets/src/scss/variables/_fonts.scss
@@ -1,5 +1,5 @@
 $fonts: (
-     "Catamaran": './fonts/Catamaran.ttf',
-      "Lato": './fonts/Lato.ttf',
+     "Catamaran": '/assets/fonts/Catamaran.ttf',
+      "Lato": '/assets/fonts/Lato.ttf',
       "Muli": 'https://use.typekit.net/uxs7gxx.css'
 );
