--- a/scss-feladatok-sitebuilding/assets/css/style.css
+++ b/scss-feladatok-sitebuilding/assets/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Catamaran";
-  src: url("./fonts/Catamaran.ttf");
+  src: url("/assets/fonts/Catamaran.ttf");
   font-weight: 100;
 }
 .Catamaran {
@@ -9,7 +9,7 @@
 
 @font-face {
   font-family: "Lato";
-  src: url("./fonts/Lato.ttf");
+  src: url("/assets/fonts/Lato.ttf");
   font-weight: 100;
 }
 .Lato {
@@ -25,6 +25,198 @@
   font-family: "Muli", Helvetica, Arial, sans-serif;
 }
 
+.margin-top-1 {
+  margin-top: 0 !important;
+}
+
+.padding-top-1 {
+  padding-top: 0 !important;
+}
+
+.margin-right-1 {
+  margin-right: 0 !important;
+}
+
+.padding-right-1 {
+  padding-right: 0 !important;
+}
+
+.margin-bottom-1 {
+  margin-bottom: 0 !important;
+}
+
+.padding-bottom-1 {
+  padding-bottom: 0 !important;
+}
+
+.margin-left-1 {
+  margin-left: 0 !important;
+}
+
+.padding-left-1 {
+  padding-left: 0 !important;
+}
+
+.margin-top-2 {
+  margin-top: 0.25rem !important;
+}
+
+.padding-top-2 {
+  padding-top: 0.25rem !important;
+}
+
+.margin-right-2 {
+  margin-right: 0.25rem !important;
+}
+
+.padding-right-2 {
+  padding-right: 0.25rem !important;
+}
+
+.margin-bottom-2 {
+  margin-bottom: 0.25rem !important;
+}
+
+.padding-bottom-2 {
+  padding-bottom: 0.25rem !important;
+}
+
+.margin-left-2 {
+  margin-left: 0.25rem !important;
+}
+
+.padding-left-2 {
+  padding-left: 0.25rem !important;
+}
+
+.margin-top-3 {
+  margin-top: 0.5rem !important;
+}
+
+.padding-top-3 {
+  padding-top: 0.5rem !important;
+}
+
+.margin-right-3 {
+  margin-right: 0.5rem !important;
+}
+
+.padding-right-3 {
+  padding-right: 0.5rem !important;
+}
+
+.margin-bottom-3 {
+  margin-bottom: 0.5rem !important;
+}
+
+.padding-bottom-3 {
+  padding-bottom: 0.5rem !important;
+}
+
+.margin-left-3 {
+  margin-left: 0.5rem !important;
+}
+
+.padding-left-3 {
+  padding-left: 0.5rem !important;
+}
+
+.margin-top-4 {
+  margin-top: 1rem !important;
+}
+
+.padding-top-4 {
+  padding-top: 1rem !important;
+}
+
+.margin-right-4 {
+  margin-right: 1rem !important;
+}
+
+.padding-right-4 {
+  padding-right: 1rem !important;
+}
+
+.margin-bottom-4 {
+  margin-bottom: 1rem !important;
+}
+
+.padding-bottom-4 {
+  padding-bottom: 1rem !important;
+}
+
+.margin-left-4 {
+  margin-left: 1rem !important;
+}
+
+.padding-left-4 {
+  padding-left: 1rem !important;
+}
+
+.margin-top-5 {
+  margin-top: 1.5rem !important;
+}
+
+.padding-top-5 {
+  padding-top: 1.5rem !important;
+}
+
+.margin-right-5 {
+  margin-right: 1.5rem !important;
+}
+
+.padding-right-5 {
+  padding-right: 1.5rem !important;
+}
+
+.margin-bottom-5 {
+  margin-bottom: 1.5rem !important;
+}
+
+.padding-bottom-5 {
+  padding-bottom: 1.5rem !important;
+}
+
+.margin-left-5 {
+  margin-left: 1.5rem !important;
+}
+
+.padding-left-5 {
+  padding-left: 1.5rem !important;
+}
+
+.margin-top-6 {
+  margin-top: 3rem !important;
+}
+
+.padding-top-6 {
+  padding-top: 3rem !important;
+}
+
+.margin-right-6 {
+  margin-right: 3rem !important;
+}
+
+.padding-right-6 {
+  padding-right: 3rem !important;
+}
+
+.margin-bottom-6 {
+  margin-bottom: 3rem !important;
+}
+
+.padding-bottom-6 {
+  padding-bottom: 3rem !important;
+}
+
+.margin-left-6 {
+  margin-left: 3rem !important;
+}
+
+.padding-left-6 {
+  padding-left: 3rem !important;
+}
+
 /*All site*/
 html {
   scroll-behavior: smooth;
@@ -34,20 +226,36 @@ html {
   transition: all 300ms;
 }
 
-.rounded-pill {
+.main-button {
   font-family: "Lato";
   padding: 10px 35px 10px 35px;
   letter-spacing: 2px;
+  border-radius: 20px;
+  border: 1px solid white;
+  color: white;
+  font-size: 10px;
 }
-.rounded-pill:hover {
-  background-color: #fdcc52;
+@media screen and (max-width: 991px) {
+  .main-button {
+    padding: 15px 45px 15px 45px;
+  }
+}
+.main-button:hover {
+  background-color: #fdcc52 !important;
   border: #fdcc52;
   transition: 300ms;
+  text-decoration: none !important;
+  color: black;
 }
 
 /*NEW-AGE*/
 .navbar-brand {
   color: #fdcc52 !important;
+}
+@media screen and (max-width: 991px) {
+  .navbar-brand {
+    padding-left: 0px;
+  }
 }
 .navbar-brand:hover {
   color: white !important;
@@ -59,13 +267,76 @@ html {
 .scrolled .navbar-brand:hover {
   color: #fdcc52 !important;
 }
+@media screen and (max-width: 991px) {
+  .scrolled .navbar-brand {
+    color: #fdcc52 !important;
+  }
+}
 
+/*
+nav {
+    position: fixed;
+}
+*/
 .nav-link {
   font-size: 10px;
   color: #d6c4d5 !important;
 }
+@media screen and (max-width: 991px) {
+  .nav-link {
+    color: black;
+  }
+}
 .nav-link:hover {
   color: white !important;
+}
+@media screen and (max-width: 991px) {
+  .nav-link:focus {
+    color: #fdcc52 !important;
+  }
+}
+
+#new-age button {
+  margin-right: 0px;
+  color: black;
+  font-weight: 600;
+}
+@media screen and (max-width: 991px) {
+  #new-age button {
+    margin-right: 3rem;
+  }
+}
+
+#hamburgerMenu {
+  justify-content: end;
+  text-align: right;
+  font-weight: 600;
+  margin-right: 3rem;
+  padding-right: 3rem;
+}
+@media screen and (max-width: 991px) {
+  #hamburgerMenu {
+    margin-right: 0px;
+    padding-right: 0px;
+  }
+}
+
+.link-1 {
+  padding-right: 0;
+}
+@media screen and (max-width: 991px) {
+  .link-1 {
+    padding-right: 3rem !important;
+  }
+}
+
+.link-2, .link-3 {
+  padding-right: 0.25rem;
+}
+@media screen and (max-width: 991px) {
+  .link-2, .link-3 {
+    padding-right: 3rem !important;
+  }
 }
 
 .scrolled .nav-link {
@@ -84,25 +355,84 @@ html {
   background: url("/assets/img/bg-pattern.png"), linear-gradient(to right, #d92433, #7d4294);
   background-repeat: repeat;
 }
-
+@media screen and (max-width: 991px) {
+  #new-age {
+    height: 1400px;
+    text-align: center;
+  }
+}
 #new-age-content {
   padding-top: 130px;
 }
-
+#new-age-content .row {
+  justify-content: center;
+}
+#new-age-content .row .col-lg-5 {
+  color: white;
+  margin-right: 3rem;
+  margin-top: 3rem;
+  padding-top: 1.5rem;
+}
+@media screen and (max-width: 991px) {
+  #new-age-content .row .col-lg-5 {
+    margin-right: 0;
+    margin-top: 0;
+    padding-top: 0;
+  }
+}
+#new-age-content .row .col-lg-4 {
+  margin-top: 0;
+  margin-left: 3rem;
+  padding-left: 3rem;
+}
+@media screen and (max-width: 991px) {
+  #new-age-content .row .col-lg-4 {
+    margin-top: 3rem;
+    margin-left: 0;
+    padding-left: 0;
+  }
+}
+#new-age-content .main-button {
+  display: inline-block;
+  margin-top: 1.5rem;
+}
+@media screen and (max-width: 991px) {
+  #new-age-content .main-button {
+    margin-right: 3rem;
+    margin-top: 3rem;
+  }
+}
 #new-age h1 {
   font-size: 45px;
   line-height: 55px;
+}
+@media screen and (max-width: 991px) {
+  #new-age h1 {
+    font-size: 40px;
+    line-height: 50px;
+  }
 }
 
 #phone {
   height: 550px;
 }
-
+@media screen and (max-width: 991px) {
+  #phone {
+    height: 800px;
+  }
+}
 #phone-screen {
   height: 425px;
   position: relative;
   bottom: 488px;
   left: 17px;
+}
+@media screen and (max-width: 991px) {
+  #phone-screen {
+    height: 615px;
+    left: 0;
+    bottom: 708px;
+  }
 }
 
 /*DOWNLOAD*/
@@ -114,32 +444,135 @@ html {
 #download {
   height: 550px;
 }
-
+@media screen and (max-width: 991px) {
+  #download {
+    height: 900px;
+  }
+}
 #download img {
   width: 200px;
 }
-
+@media screen and (max-width: 991px) {
+  #download img {
+    width: 300px;
+  }
+}
 #download h1 {
   font-weight: 500;
+  font-size: 70px;
 }
-
+@media screen and (max-width: 991px) {
+  #download h1 {
+    font-weight: 500;
+    font-size: 80px;
+  }
+}
 #download p {
   font-weight: 600;
   font-size: 20px;
+}
+@media screen and (max-width: 991px) {
+  #download p {
+    font-weight: 600;
+    font-size: 25px;
+  }
+}
+#download > div {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+#download > div > div {
+  margin: auto;
+}
+#download > div > div > div {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+@media screen and (max-width: 991px) {
+  #download > div > div > div {
+    display: block;
+  }
+}
+#download > div > div > div > div {
+  margin-right: 0.25rem;
+  margin-bottom: 0;
+}
+@media screen and (max-width: 991px) {
+  #download > div > div > div > div {
+    margin-right: 0;
+    margin-bottom: 1.5rem;
+  }
 }
 
 /*FEATURES*/
 #features {
   height: 950px;
+  text-align: center;
 }
-
+@media screen and (max-width: 991px) {
+  #features {
+    height: 3300px;
+  }
+}
 #features h1 {
   font-size: 45px;
   font-weight: 500;
+  text-align: center;
+}
+@media screen and (max-width: 991px) {
+  #features h1 {
+    font-size: 70px;
+    font-weight: 500;
+  }
+}
+#features p {
+  color: gray;
+}
+@media screen and (max-width: 991px) {
+  #features p {
+    font-size: 25px;
+    font-weight: 600;
+  }
+}
+#features h3 {
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+}
+@media screen and (max-width: 991px) {
+  #features h3 {
+    font-size: 50px;
+    font-weight: 500;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+}
+#features-content > div {
+  margin-top: 1rem;
+}
+@media screen and (max-width: 991px) {
+  #features-content > div {
+    margin-top: 0;
+  }
+}
+#features-content > div > div:nth-child(2), #features-content > div > div:nth-child(3) {
+  margin-top: 3rem;
+}
+@media screen and (max-width: 991px) {
+  #features-content > div > div:nth-child(2), #features-content > div > div:nth-child(3) {
+    margin-top: 0;
+  }
 }
 
 #phone2 {
   height: 550px;
+}
+@media screen and (max-width: 991px) {
+  #phone2 {
+    height: 900px;
+  }
 }
 
 #phone-screen2 {
@@ -148,204 +581,207 @@ html {
   bottom: 490px;
   left: 10px;
 }
-
-.iconDiv {
-  border-bottom: 1px solid;
-  border-image: linear-gradient(to right, #da2431, #7a4397);
-  border-image-slice: 1;
-}
-
-.icon {
-  font-size: 70px;
-  color: #b2325d;
-}
-
-/*STOPWAITING*/
-#stopWaiting {
-  height: 680px;
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("/assets/img/bg-cta.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-#stopWaiting h1 {
-  font-size: 70px;
-}
-
-/*CONTACT*/
-#contact {
-  height: 320px;
-}
-
-#contact h1 {
-  font-size: 50px;
-}
-
-#contact a {
-  border-radius: 100%;
-  opacity: 0.9;
-}
-
-#contact a:hover {
-  opacity: 1;
-}
-
-.twitter {
-  background-color: #1da1f3;
-  padding: 30px 18px 15px 22px;
-}
-
-.facebook {
-  background-color: #3b5999;
-  padding: 30px 25px 15px 25px;
-}
-
-.gmail {
-  background-color: #d74a35;
-  padding: 30px 20px 15px 20px;
-}
-
-/*FOOTER*/
-footer {
-  height: 110px;
-  background-color: #222222;
-}
-
-footer span {
-  cursor: pointer;
-}
-
-footer span:hover {
-  color: #fdcc52 !important;
-}
-
 @media screen and (max-width: 991px) {
-  .rounded-pill {
-    padding: 15px 45px 15px 45px;
-  }
-
-  /*NEW-AGE*/
-  #new-age {
-    height: 1400px;
-    text-align: center;
-  }
-
-  #new-age .nav-link {
-    color: black;
-  }
-
-  .scrolled .navbar-brand {
-    color: #fdcc52 !important;
-  }
-
-  #new-age .nav-link:focus {
-    color: #fdcc52 !important;
-  }
-
-  #new-age h1 {
-    font-size: 40px;
-    line-height: 50px;
-  }
-
-  #phone {
-    height: 800px;
-  }
-
-  #phone-screen {
-    height: 615px;
-    left: 0;
-    bottom: 708px;
-  }
-
-  /*DOWNLOAD*/
-  #download {
-    height: 900px;
-  }
-
-  #download img {
-    width: 300px;
-  }
-
-  #download h1 {
-    font-weight: 500;
-    font-size: 80px;
-  }
-
-  #download p {
-    font-weight: 600;
-    font-size: 25px;
-  }
-
-  /*FEATURES*/
-  #features {
-    height: 3300px;
-  }
-
-  #features h1 {
-    font-size: 70px;
-    font-weight: 500;
-  }
-
-  #features P {
-    font-size: 25px;
-    font-weight: 600;
-  }
-
-  #phone2 {
-    height: 900px;
-  }
-
   #phone-screen2 {
     height: 695px;
     position: absolute;
     left: 164px;
     top: 100px;
   }
+}
 
-  .iconDiv {
-    margin-top: 150px;
-  }
-
+.icon {
+  font-size: 70px;
+  color: #b2325d;
+}
+@media screen and (max-width: 991px) {
   .icon {
     font-size: 120px;
     color: #b2325d;
   }
-
-  #features h3 {
-    font-size: 50px;
-    font-weight: 500;
+}
+.iconDiv {
+  border-bottom: 1px solid;
+  border-image: linear-gradient(to right, #da2431, #7a4397);
+  border-image-slice: 1;
+}
+@media screen and (max-width: 991px) {
+  .iconDiv {
+    margin-top: 150px;
   }
+}
 
-  /* CONTACT */
+/*STOPWAITING*/
+#stopWaiting {
+  min-width: 100vw;
+  height: 680px;
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("/assets/img/bg-cta.jpg");
+  background-size: cover;
+  background-position: center;
+}
+#stopWaiting > div {
+  height: 100%;
+}
+#stopWaiting > div > div {
+  height: 100%;
+}
+#stopWaiting > div > div > div {
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 3rem;
+  padding-left: 3rem;
+}
+@media screen and (max-width: 991px) {
+  #stopWaiting > div > div > div {
+    margin-left: 0;
+    padding-left: 0;
+  }
+}
+#stopWaiting h1 {
+  font-size: 70px;
+  color: white;
+}
+#stopWaiting .main-button {
+  margin-top: 1rem;
+}
+@media screen and (max-width: 991px) {
+  #stopWaiting .main-button {
+    margin-top: 1.5rem;
+  }
+}
+
+/*CONTACT*/
+#contact {
+  height: 320px;
+  text-align: center;
+}
+@media screen and (max-width: 991px) {
   #contact {
     height: 500px;
   }
-
+}
+#contact > div {
+  height: 100%;
+}
+#contact > div > div {
+  height: 100%;
+  justify-content: center;
+}
+#contact > div > div > div {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+#contact h1 {
+  font-size: 50px;
+}
+@media screen and (max-width: 991px) {
   #contact h1 {
     font-size: 70px;
   }
-
+}
+#contact nav {
+  margin-top: 1.5rem;
+}
+@media screen and (max-width: 991px) {
+  #contact nav {
+    margin-top: 1.5rem;
+  }
+}
+#contact a {
+  color: white;
+  border-radius: 100%;
+  opacity: 0.9;
+}
+#contact a:hover {
+  opacity: 1;
+}
+@media screen and (max-width: 991px) {
   #contact a {
     font-size: 30px;
     opacity: 1;
   }
+}
 
+.heart {
+  color: #dd4c39;
+}
+
+.social {
+  justify-content: center;
+  height: 100%;
+}
+
+.twitter {
+  background-color: #1da1f3;
+  padding: 30px 18px 15px 22px;
+  margin-right: 0.5rem;
+}
+@media screen and (max-width: 991px) {
   .twitter {
     padding: 40px 15px 15px 25px;
+    margin-right: 1rem;
   }
+}
 
+.facebook {
+  background-color: #3b5999;
+  padding: 30px 25px 15px 25px;
+  margin-right: 0.5rem;
+}
+@media screen and (max-width: 991px) {
   .facebook {
     padding: 40px 30px 15px 30px;
+    margin-right: 1rem;
   }
+}
 
+.gmail {
+  background-color: #d74a35;
+  padding: 30px 20px 15px 20px;
+}
+@media screen and (max-width: 991px) {
   .gmail {
     padding: 40px 20px 15px 20px;
   }
+}
 
+/*FOOTER*/
+footer {
+  color: gray;
+  text-align: center;
+  height: 110px;
+  background-color: #222222;
+}
+@media screen and (max-width: 991px) {
   footer {
     height: 150px;
     font-size: 25px;
   }
+}
+footer > div {
+  height: 100%;
+}
+footer > div > div {
+  height: 100%;
+  justify-content: center;
+}
+footer > div > div > div {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+footer > div > div > div > div {
+  padding-top: 0.25rem;
+}
+@media screen and (max-width: 991px) {
+  footer > div > div > div > div {
+    padding-top: 0.5rem;
+  }
+}
+footer span {
+  cursor: pointer;
+}
+footer span:hover {
+  color: #fdcc52 !important;
 }
 
 /*# sourceMappingURL=style.css.map */
