--- a/extra-feladatok-fetch/assets/css/style.css
+++ b/extra-feladatok-fetch/assets/css/style.css
@@ -2,30 +2,49 @@
     font-family: 'Roboto';
 }
 
-:root {
-    --primary-color: rgb(233, 181, 114);
-    --secondary-color: rgb(245, 110, 110);
-    --light-grey: rgb(236, 230, 230);
-    --grey: rgb(218, 212, 212);
-    --darkgrey: rgb(184, 177, 177);
-    --darkergrey: rgb(129, 125, 125);
-    --blue: rgb(0, 123, 255);
-}
-
 body,
 html {
     margin: 0;
     padding: 0;
     font-family: 'Roboto';
-    user-select: none;
 }
 
-.container {
-    width: 50%;
+.content {
+    width: 30%;
+    margin: auto;
+}
+
+.content>div {
     display: flex;
+    justify-content: center;
 }
 
-.flag {
-    color: white;
-    text-align: center;
+.content>div table{
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+}
+
+.teamTable {
+    width: 65%;
+}
+
+.playersTable {
+    margin-top: 30px;
+    margin-bottom: 10px;
+    width: 80%;
+}
+
+
+@media only screen and (max-width: 1000px) {
+    .content {
+        width: 90%;
+    }    
+
+    .teamTable {
+        width: 100%;
+    }
+    
+    .playersTable {
+        width: 100%;
+    }
 }
