--- a/scss-feladatok-sitebuilding/assets/src/scss/style.scss
+++ b/scss-feladatok-sitebuilding/assets/src/scss/style.scss
@@ -1,13 +1,19 @@
 @use "sass:list";
 @use "sass:map";
-@use "./mixins/_positions.scss" as *;
-@use "./variables/spaces" as *; //spaces for margin and padding
-@use "./variables/colors" as *; //colors
-@use "./variables/fonts" as *; //fonts
-@use "./variables/breakpoints" as *; //breakpoints
-@use "./variables/animation" as *; //breakpoints
 
-@each $name,$source in $fonts { //making fonts classes
+@use "./mixins/_positions"as *;
+@use "./mixins/buttons"as *;
+
+@use "./variables/spaces"as *; //spaces for margin and padding
+@use "./variables/colors"as *; //colors
+@use "./variables/fonts"as *; //fonts
+@use "./variables/breakpoints"as *; //breakpoints
+@use "./variables/animation"as *; //breakpoints
+
+@each $name,
+$source in $fonts {
+
+    //making fonts classes
     @font-face {
         font-family: $name;
         src: url($source);
@@ -19,19 +25,22 @@
     }
 }
 
-@for $i from 1 through 6 { //making margin and padding classes
+@for $i from 1 through 6 {
+
+    //making margin and padding classes
     @for $j from 1 through 4 {
         .margin-#{list.nth($directions, $j)}-#{$i} {
             margin-#{list.nth($directions,$j)}:#{list.nth($spaces,$i)} !important;
         }
+
         .padding-#{list.nth($directions, $j)}-#{$i} {
             padding-#{list.nth($directions,$j)}:#{list.nth($spaces,$i)} !important;
         }
     }
 }
 
-$lg: map.get($breakpoints,'lg'); //get lg breakpoint
-$transtime: map.get($animation,'transitionTime'); //get animation time
+$lg: map.get($breakpoints, 'lg'); //get lg breakpoint
+$transtime: map.get($animation, 'transitionTime'); //get animation time
 
 /*All site*/
 
@@ -42,29 +51,8 @@ html {
 *:hover {
     transition: all $transtime;
 }
-
 .main-button {
-    font-family: 'Lato';
-    padding: 10px 35px 10px 35px;
-    letter-spacing: 2px;
-    border-radius: 20px;
-    border: 1px solid $white;
-    color: $white;
-    font-size: 10px;
-
-    @media screen and (max-width: $lg) {
-        & {
-            padding: 15px 45px 15px 45px;
-        }
-    }
-
-    &:hover {
-        background-color: $primary-color !important;
-        border: $primary-color;
-        transition: $transtime;
-        text-decoration: none !important;
-        color: $black;        
-    }
+    @include main-button;
 }
 
 /*NEW-AGE*/
@@ -74,7 +62,7 @@ html {
 
     @media screen and (max-width: $lg) {
         & {
-        padding-left: 0px;
+            padding-left: 0px;
         }
     }
 
@@ -91,18 +79,12 @@ html {
     }
 
     @media screen and (max-width: $lg) {
-        &{
+        & {
             color: $primary-color !important;
         }
-    }    
+    }
 }
 
-//ez majd működni fog a fixed-top bs osztály helyett ha törlöd a FIXED-TOP osztályt
-/*
-nav {
-    position: fixed;
-}
-*/
 .nav-link {
     font-size: 10px;
     color: $navbar-color !important;
@@ -157,7 +139,8 @@ nav {
     }
 }
 
-.link-2, .link-3 {
+.link-2,
+.link-3 {
     padding-right: 0.25rem;
 
     @media screen and (max-width: $lg) {
@@ -192,7 +175,7 @@ nav {
     &-content {
         padding-top: 130px;
 
-        & .row{
+        & .row {
             justify-content: center;
 
             & .col-lg-5 {
@@ -200,7 +183,7 @@ nav {
                 margin-right: 3rem;
                 margin-top: 3rem;
                 padding-top: 1.5rem;
-                
+
                 @media screen and (max-width: $lg) {
                     margin-right: 0;
                     margin-top: 0;
@@ -208,11 +191,11 @@ nav {
                 }
             }
 
-            & .col-lg-4{
+            & .col-lg-4 {
                 margin-top: 0;
                 margin-left: 3rem;
                 padding-left: 3rem;
-                
+
                 @media screen and (max-width: $lg) {
                     margin-top: 3rem;
                     margin-left: 0;
@@ -221,10 +204,10 @@ nav {
             }
         }
 
-        & .main-button{
+        & .main-button {
             display: inline-block;
             margin-top: 1.5rem;
-            
+
             @media screen and (max-width: $lg) {
                 margin-right: 3rem;
                 margin-top: 3rem;
@@ -235,11 +218,11 @@ nav {
     & h1 {
         font-size: 45px;
         line-height: 55px;
-        
+
         @media screen and (max-width: $lg) {
             & {
-            font-size: 40px;
-            line-height: 50px;
+                font-size: 40px;
+                line-height: 50px;
             }
         }
     }
@@ -259,16 +242,16 @@ nav {
         position: relative;
         bottom: 488px;
         left: 17px;
-        
+
         @media screen and (max-width: $lg) {
-                & {
+            & {
                 height: 615px;
                 left: 0;
                 bottom: 708px;
             }
         }
     }
-    
+
 }
 
 /*DOWNLOAD*/
@@ -289,9 +272,9 @@ nav {
 
     & img {
         width: 200px;
-    
+
         @media screen and (max-width: $lg) {
-            &{
+            & {
                 width: 300px;
             }
         }
@@ -312,7 +295,7 @@ nav {
     & p {
         font-weight: 600;
         font-size: 20px;
-    
+
         @media screen and (max-width: $lg) {
             & {
                 font-weight: 600;
@@ -321,15 +304,15 @@ nav {
         }
     }
 
-    & > div {
+    &>div {
         height: 100%;
         @include flex-column;
         text-align: center;
 
-        & > div {
+        &>div {
             margin: auto;
 
-            & > div {
+            &>div {
                 @include flex-row;
                 justify-content: center;
 
@@ -337,7 +320,7 @@ nav {
                     display: block;
                 }
 
-                & > div {
+                &>div {
                     margin-right: 0.25rem;
                     margin-bottom: 0;
 
@@ -362,12 +345,12 @@ nav {
             height: 3300px;
         }
     }
-    
+
     & h1 {
         font-size: 45px;
         font-weight: 500;
         text-align: center;
-    
+
         @media screen and (max-width: $lg) {
             & {
                 font-size: 70px;
@@ -390,6 +373,7 @@ nav {
     & h3 {
         margin-top: 1rem;
         margin-bottom: 0.5rem;
+
         @media screen and (max-width: $lg) {
             & {
                 font-size: 50px;
@@ -402,16 +386,17 @@ nav {
 
     &-content {
 
-        & > div {
+        &>div {
             margin-top: 1rem;
-            
+
             @media screen and (max-width: $lg) {
                 & {
                     margin-top: 0;
                 }
             }
-        
-            & > div:nth-child(2),  & > div:nth-child(3){
+
+            &>div:nth-child(2),
+            &>div:nth-child(3) {
                 margin-top: 3rem;
 
                 @media screen and (max-width: $lg) {
@@ -455,8 +440,9 @@ nav {
     color: $features-icon-color;
 
     @media screen and (max-width: $lg) {
-        & {font-size: 120px;
-        color: $features-icon-color;
+        & {
+            font-size: 120px;
+            color: $features-icon-color;
         }
     }
 
@@ -482,13 +468,13 @@ nav {
     background-size: cover;
     background-position: center;
 
-    & > div {
+    &>div {
         height: 100%;
-        
-        & > div {
+
+        &>div {
             height: 100%;
 
-            & > div {
+            &>div {
                 margin-top: auto;
                 margin-bottom: auto;
                 margin-left: 3rem;
@@ -529,14 +515,14 @@ nav {
         }
     }
 
-    & > div {
+    &>div {
         height: 100%;
-        
-        & > div {
+
+        &>div {
             height: 100%;
             justify-content: center;
 
-            & > div {
+            &>div {
                 margin-top: auto;
                 margin-bottom: auto;
             }
@@ -556,10 +542,10 @@ nav {
 
     & nav {
         margin-top: 1.5rem;
-        
+
         @media screen and (max-width: $lg) {
             & {
-                margin-top: 1.5rem;                
+                margin-top: 1.5rem;
             }
         }
     }
@@ -569,7 +555,7 @@ nav {
         border-radius: 100%;
         opacity: 0.9;
 
-        &:hover{
+        &:hover {
             opacity: 1;
         }
 
@@ -595,7 +581,7 @@ nav {
     background-color: $twitter;
     padding: 30px 18px 15px 22px;
     margin-right: 0.5rem;
-    
+
     @media screen and (max-width: $lg) {
         & {
             padding: 40px 15px 15px 25px;
@@ -643,20 +629,20 @@ footer {
         }
     }
 
-    & > div {
+    &>div {
         height: 100%;
-        
-        & > div {
+
+        &>div {
             height: 100%;
             justify-content: center;
 
-            & > div {
+            &>div {
                 margin-top: auto;
                 margin-bottom: auto;
 
-                & > div {
+                &>div {
                     padding-top: 0.25rem;
-                    
+
                     @media screen and (max-width: $lg) {
                         & {
                             padding-top: 0.5rem;
@@ -675,16 +661,3 @@ footer {
         }
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
